--- a/NEON_MAOM.Rmd
+++ b/NEON_MAOM.Rmd
@@ -27,7 +27,7 @@ data(vascular.families)
  library(MuMIn)
 ```
 
-```{r setup, include=F}
+```{r data, include=F}
 #Identify study sites
 forests=c("BART","DELA","HARV","ORNL","TREE","LENO", "SERC")
 
@@ -508,7 +508,7 @@ gradients=ggplot(received_samples_plot, aes(x=order, y=dominance, fill=myc.type)
 ggarrange(map, gradients, nrow=1, ncol=2, legend = "right", labels= c("a","b"))
 
 
-ggsave("Fig1.pdf", path="figures/", width= 24, height= 12, units="cm")
+ggsave("Figure_1.pdf", path="figures/", width= 18, height= 9, dpi=600, units="cm")
 
 ```
 
@@ -668,7 +668,7 @@ end_members_maom_prop=final_data %>%
           
 ```
 
-```{r SOM_proportions_figure, fig.width=14, fig.height=5, include=F}
+```{r SOM_proportions_figure}
 
 
 propC.myc=ggplot(final_data, aes(x=E*100, y=proportion.C_HF, color=Site))+
@@ -707,9 +707,9 @@ scale_color_viridis_d(option="C")+
   theme_cowplot()+
   theme(legend.title=element_text(hjust=0.5, size=16), legend.text=element_text(size=15), axis.text=element_text(size=15), axis.title=element_text(size=19))
 
-ggarrange(propC.myc, propN.myc, concC.myc, concN.myc, nrow=2, ncol=2, common.legend=T, legend = "right", labels=c("a", "b", "c", "d"))
-
-ggsave("HF_C_N_by_myc2.pdf", path="figures/", width= 20, height= 18, units="cm")
+# ggarrange(propC.myc, propN.myc, concC.myc, concN.myc, nrow=2, ncol=2, common.legend=T, legend = "right", labels=c("a", "b", "c", "d"))
+# 
+# ggsave("HF_C_N_by_myc2.pdf", path="figures/", width= 20, height= 18, units="cm")
 
 propC.myc.olf=ggplot(final_data, aes(x=E*100, y=proportion.C_OLF))+
     geom_point(aes(color=Site))+
@@ -743,7 +743,7 @@ concN.myc.olf=ggplot(final_data, aes(x=E*100, y=mg.N.per.g.soil_OLF, color=Site)
   theme_cowplot()+
   theme(legend.title=element_text(hjust=0.5, size=16), legend.text=element_text(size=15), axis.text=element_text(size=15), axis.title=element_text(size=19))
 
-ggarrange(propC.myc.olf, propN.myc.olf, concC.myc.olf, concN.myc.olf, nrow=2, ncol=2, common.legend=T,legend = "right",labels=c("a", "b", "c", "d"))
+
 
 propC.myc.flf=ggplot(final_data, aes(x=E*100, y=proportion.C_FLF, color=Site))+
   geom_point(aes(color=Site))+
@@ -778,21 +778,17 @@ concN.myc.flf=ggplot(final_data, aes(x=E*100, y=mg.N.per.g.soil_FLF, color=Site)
   theme_cowplot()+
   theme(legend.title=element_text(hjust=0.5, size=16), legend.text=element_text(size=15), axis.text=element_text(size=15), axis.title=element_text(size=19))
 
-ggarrange(propC.myc.flf, propN.myc.flf, concC.myc.flf, concN.myc.flf, nrow=2, ncol=2, common.legend=T,legend = "right", labels=c("a", "b", "c", "d"))
-
-
 
 ggarrange(propC.myc.flf, propC.myc.olf, propC.myc, nrow=1, ncol=3, common.legend=T, legend="right", labels=c("a", "b","c"))
-ggsave("som.C.proportion.plots2.pdf",path="figures/", width= 30, height= 10, units="cm")
+ggsave("Figure_2.pdf",path="figures/", dpi=600, width= 30, height= 10, units="cm")
 
 ggarrange(propN.myc.flf, propN.myc.olf, propN.myc, nrow=1, ncol=3, common.legend=T, legend="right", labels=c("a", "b","c"))
-ggsave("som.N.proportion.plots2.pdf",path="figures/", width= 30, height= 10, units="cm")
+ggsave("Figure_S1.pdf",path="figures/", dpi=600, width= 30, height= 10, units="cm")
 
-ggsave("propN.ECM.pdf", path="figures/", width= 30, height= 10, units="cm")
 
 ```
 
-```{r CDI_figure, echo=F}
+```{r Figure3, echo=F}
 
 myc_gradient_prophf_coefficients=summary(lmList(proportion.C_HF~E|Site, data=final_data))$coefficients %>% 
   as.data.frame()
@@ -881,7 +877,7 @@ labs(x=" Climate Decomposition Index ", y="Change in [MAOM N]\n along mycorrhiza
   theme(legend.title=element_blank(), legend.text=element_text(size=12), axis.text=element_text(size=12),  axis.title=element_text(size=13))
 
 ggarrange(w,y,x,z, labels=c("a", "b", "c", "d"), nrow=2, ncol=2, legend=F)
-ggsave("Fig3.pdf", path="figures/", width= 20, height= 18, units="cm")
+ggsave("Figure_3.pdf", path="figures/", dpi=600, width= 20, height= 18, units="cm")
 
 ```
 
@@ -917,7 +913,7 @@ concN.fe.hf=ggplot(final_data, aes(x=FeOx, y=mg.N.per.g.soil_HF, color=Site))+
   theme(legend.title=element_text(hjust=0.5, size=16), legend.text=element_text(size=15), axis.text=element_text(size=15), axis.title=element_text(size=19))
 
 ggarrange(concC.fe.hf,concN.fe.hf, nrow=1, ncol=2, common.legend=T, legend="right")
-ggsave("hf.conc.CN.fe.pdf",path="figures/", width= 20, height= 10, units="cm")
+ggsave("Figure_4.pdf",path="figures/",dpi=600,  width= 20, height= 10, units="cm")
 
 #what are the slopes of these lines?
 fe_conchf_slopes_C=coef(lmList(mg.C.per.g.soil_HF~FeOx|Site , data = final_data))[2]
@@ -1039,7 +1035,7 @@ ggplot(final_data[final_data$Site!= "ORNL",], aes(x=Site, y=d14C))+
   geom_point()+
   theme_cowplot()
 
-ggsave("radiocarbon.by.site.pdf",path="figures/", width= 14, height= 10, units="cm")
+ggsave("Figure_6.pdf",path="figures/", dpi=600, width= 14, height= 10, units="cm")
 
 radiocarbon.by.CDI=ggplot(final_data[final_data$Site!= "ORNL",], aes(x=CDI, y=d14C))+
   geom_point()+
@@ -1081,7 +1077,7 @@ d13C.by.FeOx=ggplot(final_data[final_data$Site!= "ORNL",], aes(x=FeOx, y=d13C))+
   theme_cowplot()
 
 ggarrange(radiocarbon.by.CDI, radiocarbon.by.ECM, radiocarbon.by.FeOx, d13C.by.CDI, d13C.by.ECM, d13C.by.FeOx, ncol=3, nrow=2, labels= c("a","b", "c", "d", "e", "f"))
-ggsave("MAOM.C.isotopes.pdf", path="figures/", width= 24, height= 14, units="cm")
+ggsave("Figure_S3.pdf", path="figures/", width= 24, height= 14, units="cm")
 
 
 ```
@@ -1107,7 +1103,7 @@ pctAngio=ggplot(plotPctAngio %>%
   theme_cowplot()+
   theme(axis.text.x = element_blank(), axis.ticks.x = element_blank(),strip.background = element_rect( fill="white"),legend.title=element_blank())
 
-ggsave("pctAngioGymno.pdf", path="figures/", width= 20, height= 16, units="cm")
+#ggsave("pctAngioGymno.pdf", path="figures/", width= 20, height= 16, units="cm")
 
 BAbyMYC=ggplot(final_data %>% 
                  left_join(ecm_order), aes(x=order, y=plotBA))+
@@ -1177,7 +1173,7 @@ feox_cdi=ggplot(final_data, aes(x=CDI, y=FeOx))+
   )
 
 ggarrange(basal_area_cdi, feox_cdi, ncol=2, nrow=1, labels= c("a","b"), legend=F)
-ggsave("FigS2.pdf", path="figures/", width= 24, height= 12, units="cm")
+#ggsave("FigS.pdf", path="figures/", width= 24, height= 12, units="cm")
 
 summary(lm(plotBA~CDI,data=final_data )) #
 summary(lm(FeOx~CDI,data=final_data )) #yes, more FeOx in warmer sites
@@ -1250,7 +1246,7 @@ ggplot(final_data, aes(x=CDI, y=FeOx))+
   geom_smooth(method="lm", color="blue")+
   theme_cowplot()
 
-ggsave("CDI_vs_FeOx.pdf", path="figures/", width= 30, height= 24, units="cm")
+#ggsave("CDI_vs_FeOx.pdf", path="figures/", width= 30, height= 24, units="cm")
 
 #using neon_full_data to plot % AM and pH at LENO
 LENO_plot=ggplot(data=neon_full_data %>% filter(Site=="LENO"), aes(x=A, y=pH))+
@@ -1303,7 +1299,7 @@ ctoN.myc.hf=ggplot(final_data, aes(x=E*100, y=C.N_HF, colour=Site))+
 
 
 ggarrange(ctoN.myc.flf, ctoN.myc.olf, ctoN.myc.hf, nrow=1, ncol=3, common.legend=T,legend = "right", labels=c("a", "b", "c"))
-ggsave("cn.myc.pdf",path="figures/", width= 30, height= 10, units="cm")
+ggsave("Figure_5.pdf",path="figures/", dpi=600,  width= 30, height= 10, units="cm")
 
 c.n.mod.flf=lmer(C.N_FLF ~ E+CDI+FeOx  +(1|Site),
            data=final_data,na.action = na.omit)
@@ -1327,7 +1323,7 @@ ctoN.cdi.hf=ggplot(final_data, aes(x=CDI, y=C.N_HF))+
   scale_color_viridis_d()+
   theme(legend.title=element_text(hjust=0.5, size=16), legend.text=element_text(size=15), axis.text=element_text(size=15), axis.title=element_text(size=19))
 
-ggsave("maom.cn.cdi.pdf",path="figures/", width= 14, height= 12, units="cm")
+#ggsave("maom.cn.cdi.pdf",path="figures/", width= 14, height= 12, units="cm")
 
 ```
 `
